css/styles.css
body {
	background: #fff;
	font-family: 'Helvetica', 'Helvetica Neue', 'Arial', sans-serif;
	font-size: 12px;
	color: #444;
	margin-top: 10px;
}

p {
	margin-bottom: 20px;
}

h2, h4, h5, nav a, input[type="submit"] {
	font-family: 'Oswald', sans-serif;
	text-transform: uppercase;
	font-weight: 400;
}

img {
	max-width: 100%;
    height: auto;
    vertical-align: bottom;
}

h2 {
	font-size: 500%;
}

h5 {
	font-size: 200%;
}

footer {
	position: fixed;
	left: 22px;
	bottom: 4px;
	z-index: 20;
	opacity: .5;
	font-size: 80%;
}

*, *:after, *:before {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    padding: 0; margin: 0;
}

.container {
	padding-bottom: 50px;
	margin-left: 180px;
}

/*-----------------------------------------------------------------------------------*/
/*	MODEL STYLES
/*-----------------------------------------------------------------------------------*/

.main {
	display: inline-block;
}

.template {
    display: none;
}

.stream {
	margin-left: 180px;
	white-space: nowrap;
}

.mod-pic {
	padding-left: 5px;
}

.modelstream {
	max-height: 90%;
	min-width: 100%;
}

/*-----------------------------------------------------------------------------------*/
/*	END MODEL STYLES
/*-----------------------------------------------------------------------------------*/


/*-----------------------------------------------------------------------------------*/
/*	NAV STYLES
/*-----------------------------------------------------------------------------------*/

nav {
	background-color: #f5f5f5;
	position: fixed;
	margin-left: 20px;
	width: 150px;
	height: 100%;
	opacity: .9;
	z-index: 10;
}

ol, ul {
	list-style:none;
}

nav a {
	display: block;
	padding: 5px 20px;
}

nav li:hover > a {
	padding-left: 35px;
	color: #e74c3c;
	border-color: #e74c3c;
}

nav li {
	position: relative;
	background: #f5f5f5;
}

nav ul li ul {
	display: none;
	position: absolute;
	left: 100%;
	min-width: 150px;
	top: -1px;
	z-index: 999;
	border: 1px solid #c5c5c5;
}

nav ul li:hover ul {
	display: block;
}

a {
	font-size: 150%;
	color: #444;
	text-decoration: none;
	border-bottom: 1px dotted #c5c5c5;
	-webkit-transition: all 300ms ease-in-out;
	-moz-transition: all 300ms ease-in-out;
	-ms-transition: all 300ms ease-in-out;
	-o-transition: all 300ms ease-in-out;
	transition: all 300ms ease-in-out;
}

a:hover, .social a:hover {
	color: #e74c3c;
	border-color: #e74c3c;
}

.widget {
	background-color: #f5f5f5;
	border-bottom: 1px dotted #c5c5c5;
}

.social a {
	border-bottom: none;
	font-size: 20px;
	margin-left: 10px;
	color: #444;
}

.logo {
	width: 100px;
}

/*-----------------------------------------------------------------------------------*/
/*	END NAV STYLES
/*-----------------------------------------------------------------------------------*/

/*-----------------------------------------------------------------------------------*/
/*	SLIDESHOW STYLES
/*-----------------------------------------------------------------------------------*/
@-webkit-keyframes pulse {
	0%      {opacity: 0;}
    25%    {opacity: 1.0;}
    85%    {opacity: 1.0;}
   	100%   {opacity: 0;}
}
@keyframes pulse {
	0%      {opacity: 0;}
    25%    {opacity: 1.0;}
    85%    {opacity: 1.0;}
   	100%   {opacity: 0;}
}
.slideshow {
	width: 100%;
	-webkit-animation: pulse 5.0s infinite;
	animation: pulse 5.0s infinite;
	-webkit-transition: all 0.2s ease;
	-moz-transition: all 0.2s ease;
	-o-transition: all 0.2s ease;
	-ms-transition: all 0.2s ease;
	transition: all 0.2s ease; 
}

.galleryRow {
	margin-top: 20px;
	padding: 10px;
	position: absolute;
	top: 0px;
	left: 180px;

}

.galleryItem {
	display: inline;
	padding: 5px;
}

.slide-container {
	margin-left: 180px;
	width: 80%;
}

/*-----------------------------------------------------------------------------------*/
/*	END SLIDESHOW STYLES
/*-----------------------------------------------------------------------------------*/

/*-----------------------------------------------------------------------------------*/
/*	ABOUT STYLES
/*-----------------------------------------------------------------------------------*/

.about-container {
	padding-bottom: 50px;
	margin-left: 180px;
	margin-right: 180px;
	font-size: 150%;
}
.about {
	margin-bottom: 20px;
}

.about:hover {
	 -webkit-filter: brightness(120%);
}

/*-----------------------------------------------------------------------------------*/
/*	END ABOUT STYLES
/*-----------------------------------------------------------------------------------*/

/*-----------------------------------------------------------------------------------*/
/*	CONTACT STYLES
/*-----------------------------------------------------------------------------------*/

.one_third {
    width: 30.66%;
    margin-right: 20px;
    float: left;
    padding: 20px;
}

.two_thirds { 
    width: 65.33%;
	margin-right: 0;
    float: left;
}

.contactText {
	font-size:150%;
}

input, textarea {
	width: 95%;
	background: #fff;
	border: 1px solid #c5c5c5;
	padding: 10px 20px;
	margin-bottom: 15px;
}

textarea {
	min-height: 150px;
}

input[type="submit"] {
	width: auto;
	cursor: pointer;
}

/*-----------------------------------------------------------------------------------*/
/*	END CONTACT STYLES
/*-----------------------------------------------------------------------------------*/

/*-----------------------------------------------------------------------------------*/
/*	ALBUMS STYLES
/*-----------------------------------------------------------------------------------*/

.grid li {
	float: left;
	width: 33.3%;
	position: relative;
}

.grid.portfolio li {
	overflow: hidden;
}

.grid.portfolio li div, .more-hover div {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: rgba(0,0,0,0.85);
	display: none;
	color: #fff;
	text-align: center;
	border: 5px solid #000;
}

.grid.portfolio li a, .more-hover a {
	display: block; width: 100%; height: 100%; color: #fff; border: none;
}

.grid.portfolio li a h4, .grid.portfolio li a p, .more-hover a h4, .more-hover a p {
	position: relative; top: 50%; margin-top: -22px;
}

.grid.portfolio li a p, .more-hover a p, .team .more-hover a p {
	margin-top: -5px;
}

#loader {
	overflow: hidden; width: 100%; position: relative;
	-webkit-transition: background 300ms ease-in-out;
	-moz-transition: background 300ms ease-in-out;
	-ms-transition: background 300ms ease-in-out;
	-o-transition: background 300ms ease-in-out;
	transition: background 300ms ease-in-out;
}

#spinningSquaresG { position: absolute; width: 120px; height: 15px; margin: 0 auto; top: 50%; left: 50%; z-index: 9999; margin: -7px 0 0 -60px; }.spinningSquaresG{position:absolute;top:0;background-color:#444;width:15px;height:15px;-moz-animation-name:bounce_spinningSquaresG;-moz-animation-duration:1.3s;-moz-animation-iteration-count:infinite;-moz-animation-direction:linear;-moz-transform:scale(.3);-webkit-animation-name:bounce_spinningSquaresG;-webkit-animation-duration:1.3s;-webkit-animation-iteration-count:infinite;-webkit-animation-direction:linear;-webkit-transform:scale(.3);-ms-animation-name:bounce_spinningSquaresG;-ms-animation-duration:1.3s;-ms-animation-iteration-count:infinite;-ms-animation-direction:linear;-ms-transform:scale(.3);-o-animation-name:bounce_spinningSquaresG;-o-animation-duration:1.3s;-o-animation-iteration-count:infinite;-o-animation-direction:linear;-o-transform:scale(.3);animation-name:bounce_spinningSquaresG;animation-duration:1.3s;animation-iteration-count:infinite;animation-direction:linear;transform:scale(.3)}#spinningSquaresG_1{left:0;-moz-animation-delay:.52s;-webkit-animation-delay:.52s;-ms-animation-delay:.52s;-o-animation-delay:.52s;animation-delay:.52s}#spinningSquaresG_2{left:15px;-moz-animation-delay:.65s;-webkit-animation-delay:.65s;-ms-animation-delay:.65s;-o-animation-delay:.65s;animation-delay:.65s}#spinningSquaresG_3{left:30px;-moz-animation-delay:.78s;-webkit-animation-delay:.78s;-ms-animation-delay:.78s;-o-animation-delay:.78s;animation-delay:.78s}#spinningSquaresG_4{left:45px;-moz-animation-delay:.91s;-webkit-animation-delay:.91s;-ms-animation-delay:.91s;-o-animation-delay:.91s;animation-delay:.91s}#spinningSquaresG_5{left:60px;-moz-animation-delay:1.04s;-webkit-animation-delay:1.04s;-ms-animation-delay:1.04s;-o-animation-delay:1.04s;animation-delay:1.04s}#spinningSquaresG_6{left:75px;-moz-animation-delay:1.17s;-webkit-animation-delay:1.17s;-ms-animation-delay:1.17s;-o-animation-delay:1.17s;animation-delay:1.17s}#spinningSquaresG_7{left:90px;-moz-animation-delay:1.3s;-webkit-animation-delay:1.3s;-ms-animation-delay:1.3s;-o-animation-delay:1.3s;animation-delay:1.3s}#spinningSquaresG_8{left:105px;-moz-animation-delay:1.43s;-webkit-animation-delay:1.43s;-ms-animation-delay:1.43s;-o-animation-delay:1.43s;animation-delay:1.43s}@-moz-keyframes bounce_spinningSquaresG{0%{-moz-transform:scale(1);background-color:#444}100%{-moz-transform:scale(.3) rotate(90deg);background-color:#FFF}}@-webkit-keyframes bounce_spinningSquaresG{0%{-webkit-transform:scale(1);background-color:#444}100%{-webkit-transform:scale(.3) rotate(90deg);background-color:#FFF}}@-ms-keyframes bounce_spinningSquaresG{0%{-ms-transform:scale(1);background-color:#444}100%{-ms-transform:scale(.3) rotate(90deg);background-color:#FFF}}@-o-keyframes bounce_spinningSquaresG{0%{-o-transform:scale(1);background-color:#444}100%{-o-transform:scale(.3) rotate(90deg);background-color:#FFF}}@keyframes bounce_spinningSquaresG{0%{transform:scale(1);background-color:#444}100%{transform:scale(.3) rotate(90deg);background-color:#FFF}}

/*-----------------------------------------------------------------------------------*/
/*	END ALBUMS STYLES
/*-----------------------------------------------------------------------------------*/

